<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/iv_launcher"
        fontPath="font/gotham_rounded_bold.otf"
        tools:ignore="MissingPrefix"
        android:padding="08dp"
        android:text="@string/disable_biometric_login"
        android:textColor="@color/Black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/iv_launcher"
        fontPath="font/gotham_rounded_bold.otf"
        tools:ignore="MissingPrefix"
        android:padding="08dp"
        android:text="@string/you_would_need_to_enter_you_phone_number_and_pin_code_if_you_disable_your_biometric_login_are_you_sure_you_want_to_disable_this"
        android:textColor="@color/Black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_no"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight=".5"
            android:text="@string/no"
            android:backgroundTint="@color/DarkOrange"
            />

        <Button
            android:id="@+id/btn_yes"
            android:textSize="13sp"
            android:layout_marginStart="5dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight=".5"
            android:text="@string/yes"
            android:backgroundTint="@color/DarkOrange"
            />

    </LinearLayout>
</LinearLayout>