<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/Transparent"
    android:orientation="vertical">


    <ImageView

        android:id="@+id/iv_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="-70dp"
        android:elevation="2dp"
        android:src="@drawable/ic_failed" />




    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_tick"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alert_message"
            android:textColor="@color/Black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/no_user_found_would_you_like_to_add_this_user"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_marginBottom="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="42dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/add"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_weight="0.5"
                android:background="@drawable/bt_gradient"
                android:text="@string/add"
                android:textColor="@color/White"
                android:textSize="@dimen/h12" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_weight="0.5"
                android:background="@drawable/bt_gradient"
                android:text="@string/cancel_user_add"
                android:textColor="@color/White"
                android:textSize="@dimen/h12" />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>